[package]
name = "blackbox_di"
version = "0.1.0"
edition = "2021"
description = "Rust dependency injection library"
keywords = [ "blackbox", "blackbox_di", "dependency-injection", "inversion-of-control", "di", "ioc"]
repository = "https://github.com/MichailShcherbakov/blackbox_di"
homepage = "https://github.com/MichailShcherbakov/blackbox_di"
license = "MIT"
readme = "README.md"
authors = [ "50011226+MichailShcherbakov@users.noreply.github.com" ]

[workspace]
members = [
  "packages/cast",
  "packages/di",
]

[dependencies.di]
path = "packages/di"
version = "0.1.0"